# stock-analyzer

./: .env.template  .gitignore  README.md  delete_assistant.py  delete_assistants.py  helpers.py  main.py  main_helpers.py  pyproject.toml  requirements.txt  stock_assistant.py  task_1.py
assistants/: assistants.py
config/: Config.py  constants.py  settings.py
main/: Main.py
process/: main.py
services/: assistant_service.py  openai_client.py  stock_service.py  thread_service.py  workflow_service.py
src/: main.py  task1.py
src/utils/: helpers.py
stock_analyzer/: __init__.py  __main__.py  alpha_vantage.py  config.py  openai_ops.py
tasks/: task_1.md  task_2.md  task_3.md  task_4.md
